# Military-ELO-System

./: .gitattributes  .gitignore  README.md  netlify.toml  pyproject.toml
config/: model.default.json
data/: corpus.lock.json
docs/: CORPUS_REPRODUCIBILITY.md  COVERAGE_FRAME.md  DATASET_GAPS.md  DATA_SOURCES.md  ENTITY_POLICY.md  EVIDENCE_MODEL.md  HANDOFF-COMPOSITE-AND-IDENTITIES.md  HANDOFF-DATASET-EXPANSION.md  HANDOFF-EXACT-OUTCOME-LANES.md  HANDOFF-M4-M5.md  HANDOFF-ORAN-LANE.md  HANDOFF-REVIEW-TRIAGE.md  HANDOFF-WAVE2-STOPPING-POINT.md  HANDOFF-WAVE3-STOPPING-POINT.md  HANDOFF-WAVE7-STOPPING-POINT.md  HCED-UNRESOLVED-FUNNEL.md  LICENSING.md  METHODOLOGY.md  PINNING_DISCIPLINE.md  REVIEW_WORKFLOW.md  WAVE4-PROMOTION-REVIEW.md  WAVE5-PROMOTION-REVIEW.md  WAVE6-PROMOTION-REVIEW.md
schemas/: adjudication.schema.json  claim.schema.json  event.schema.json
scripts/: build_brecke_war_registry.py  build_dashboard.py  build_release.py  build_review_packet.py  download_open_data.py  import_cow.py  ingest_ucdp.py  ingest_wikidata.py  ingest_wikidata_battles.py  report_coverage.py  report_dataset_gaps.py  report_hced_funnel.py  report_ingestion.py  report_war_constraints.py  sample_gold_set.py  serve_dashboard.py  stage_open_data.py  verify_corpus_lock.py
tests/: test_achaean_numidia_tranche.py  test_actor_identities.py  test_canonical.py  test_claims.py  test_corpus_lock.py  test_coverage.py  test_dashboard_horizon.py  test_dashboard_location.py  test_dashboard_map.py  test_dataset_gaps.py  test_engine.py  test_evidence_audit.py  test_exact_label_corrections_tranche.py  (+156 more)
(+198 files in other folders)
