[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "military-history-elo"
version = "0.1.0"
description = "An auditable, uncertainty-aware rating system for historical military performance"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
military-elo = "military_elo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
